# qtsol2

./: AcceleratedMatrix.hpp  BackgroundExtractionWidget.cpp  BackgroundExtractionWidget.hpp  BackgroundExtractor.cpp  BackgroundExtractor.hpp  CMakeLists.txt  ColorAnalysisDialog.cpp  ColorAnalysisDialog.hpp  GaiaGDR3Catalog.cpp  GenericDataTableWidget.hpp  ImageDisplayWidget.cpp  ImageDisplayWidget.hpp  ImageReader.cpp  ImageStatistics.cpp  LuaChartWidget.hpp  LuaControlledWidget.hpp  LuaMatrix.hpp  LuaWindowFactory.hpp  MenuIntegratedWidget.cpp  MenuIntegratedWidget.hpp  PCLMockAPI.cpp  PCLThreadMock.cpp  README.md  RGBPhotometryAnalyzer.cpp  RGBPhotometryAnalyzer.hpp  StarCatalogValidator.cpp  StarCatalogValidator.hpp  StarChartWidget.cpp  StarChartWidget.hpp  StarCorrelator.cpp  StarMaskGenerator.hpp  StarStatisticsChartDialog.cpp  StarStatisticsChartDialog.hpp  accelerate_demo.lua  accelerate_performance_test.lua  bindings.h  bindings.sh  bindings_auto.h  complete_accelerate_test.lua  example_lua_scripts.lua  (+27 more)
bindings/: CMakeLists.txt  ast_extractor.cpp  binding_generator.cpp  binding_generator_old.cpp
